--- a/SBIT3J_SuperSystem_Final.csproj
+++ b/SBIT3J_SuperSystem_Final.csproj
@@ -96,11 +96,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Styles\Group1Stylesheets\Dashboard.css" />
+    <Content Include="Content\Styles\Group1Stylesheets\SalesRevenueStyle.css" />
     <Content Include="Content\Styles\LoginPage.css" />
-    <Content Include="Content\Styles\_AdminMonitoring_Layout.css" />
+    <Content Include="Content\Styles\Group1Stylesheets\_AdminMonitoring_Layout.css" />
     <Content Include="Image\Group1-Assets\310946292_648016883505321_4943227458489112127_n.png" />
     <Content Include="Global.asax" />
     <Content Include="Image\Group1-Assets\CashierLogIcon.png" />
+    <Content Include="Image\Group1-Assets\CriticalLevelIcon.png" />
+    <Content Include="Image\Group1-Assets\DailySales.png" />
     <Content Include="Image\Group1-Assets\InventoryIcon.png" />
     <Content Include="Image\Group1-Assets\LogoutIcon.png" />
     <Content Include="Image\Group1-Assets\LossesIcon.png" />
@@ -108,6 +112,8 @@
     <Content Include="Image\Group1-Assets\ProfitIcon.png" />
     <Content Include="Image\Group1-Assets\received_594167488046920.png" />
     <Content Include="Image\Group1-Assets\RevenueIcon.png" />
+    <Content Include="Image\Group1-Assets\Stocks on hand.png" />
+    <Content Include="Image\Group1-Assets\TotalProductsIcon.png" />
     <Content Include="Models\SuperSystemDataModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SuperSystemDataModel.Context.cs</LastGenOutput>
