--- a/Web.config
+++ b/Web.config
@@ -43,7 +43,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DatabaseConnectionEntities" connectionString="metadata=res://*/Models.SuperSystemDatabaseModel.csdl|res://*/Models.SuperSystemDatabaseModel.ssdl|res://*/Models.SuperSystemDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9HH106OL;initial catalog=DowntownAlley_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="DatabaseConnectionEntities" connectionString="metadata=res://*/Models.SuperSystemDatabaseModel.csdl|res://*/Models.SuperSystemDatabaseModel.ssdl|res://*/Models.SuperSystemDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Quiling;initial catalog=DowntownAlley_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=True;TrustServerCertificate=True;&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
