--- a/SBIT3J_SuperSystem_Final.csproj
+++ b/SBIT3J_SuperSystem_Final.csproj
@@ -271,6 +271,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\EmployeeManagement\SampleView.cshtml" />
+    <Content Include="Views\EmployeeManagement\bagongview.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
