updated UI and Hr_RequestLeave
may problema sa Hr_CreateAccount, naiset ko na sya through the database pero kapag nag submit ako ayaw mag apply yung mga gusto ko ilagay na data

--- a/SBIT3J_SuperSystem_Final.csproj
+++ b/SBIT3J_SuperSystem_Final.csproj
@@ -289,9 +289,9 @@
     <Content Include="Views\EmployeeManagement\Delete.cshtml" />
     <Content Include="Views\EmployeeManagement\Edit.cshtml" />
     <Content Include="Views\EmployeeManagement\CreateLeave.cshtml" />
-    <Content Include="Views\EmployeeManagement\Hr_Leave_C.cshtml" />
     <Content Include="Views\EmployeeManagement\HR_Leave.cshtml" />
-    <Content Include="Views\EmployeeManagement\Time_In.cshtml" />
+    <Content Include="Views\EmployeeManagement\HR_CreateAccount.cshtml" />
+    <Content Include="Views\EmployeeManagement\TimeInn.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
