--- a/SBIT3J_SuperSystem_Final.csproj
+++ b/SBIT3J_SuperSystem_Final.csproj
@@ -220,7 +220,6 @@
     <Content Include="Content\scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Content\scripts\respond.min.js" />
     <None Include="Content\scripts\_references.js" />
-
     <Content Include="Content\Site.css" />
     <Content Include="Content\Styles\Group1Stylesheets\CompanyProfitStyle.css" />
     <Content Include="Content\Styles\Group1Stylesheets\Dashboard.css" />
@@ -457,6 +456,10 @@
     <Content Include="Views\AdminMonitoring\Inventory.cshtml" />
     <Content Include="Views\AdminMonitoring\InventoryListPrintPdf.cshtml" />
     <Content Include="Views\AdminMonitoring\SalesTransactionListPrintPdf.cshtml" />
+    <Content Include="Views\Inventory\ManageDiscount.cshtml" />
+    <Content Include="Views\Inventory\ManageDiscountCreate.cshtml" />
+    <Content Include="Views\Inventory\ManageDiscountEdit.cshtml" />
+    <Content Include="Views\Inventory\DisabledDiscount.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
