--- a/Web.config
+++ b/Web.config
@@ -49,7 +49,7 @@
   
     
   <connectionStrings>
-	  <add name="DatabaseConnectionEntities" connectionString="metadata=res://*/Models.SuperSystemDatabaseModel.csdl|res://*/Models.SuperSystemDatabaseModel.ssdl|res://*/Models.SuperSystemDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9HH106OL;initial catalog=DowntownAlley_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=True;TrustServerCertificate=True;&quot;" providerName="System.Data.EntityClient" />
+	  <add name="DatabaseConnectionEntities" connectionString="metadata=res://*/Models.SuperSystemDatabaseModel.csdl|res://*/Models.SuperSystemDatabaseModel.ssdl|res://*/Models.SuperSystemDatabaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-9HH106OL;Initial catalog=DowntownAlley_Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Encrypt=True;TrustServerCertificate=True;&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   
